<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyDogActivity">

    <TextView
        android:id="@+id/identify_dog_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/identify_dog_title"
        android:textColor="#1E4D45"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/rand_dog_breed_1"
        android:layout_width="166dp"
        android:layout_height="143dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dog_breeds"
        android:onClick="onImageClickedOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_dog_heading" />

    <ImageView
        android:id="@+id/rand_dog_breed_2"
        android:layout_width="166dp"
        android:layout_height="143dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/dog_breeds"
        android:onClick="onImageClickedTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rand_dog_breed_1" />

    <ImageView
        android:id="@+id/rand_dog_breed_3"
        android:layout_width="166dp"
        android:layout_height="143dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dog_breeds"
        android:onClick="onImageClickedThree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rand_dog_breed_1" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/next"
        android:visibility="invisible"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/breed_name"
        android:layout_width="330dp"
        android:layout_height="67dp"
        android:layout_marginTop="24dp"
        android:text="@string/dog_breed_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rand_dog_breed_3" />

    <TextView
        android:id="@+id/identify_dog_result"
        android:layout_width="295dp"
        android:layout_height="100dp"
        android:text="@string/dog_breed"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breed_name" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="149dp"
        android:layout_height="101dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textSize="60sp"
        android:visibility="invisible"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>