<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchDogActivity">

    <TextView
        android:id="@+id/identify_breed_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/search_dog_breed_title"
        android:textColor="#1E4D45"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/breed_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:completionThreshold="1"
        android:ems="10"
        android:hint="@string/search_dog_breed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_breed_heading" />

    <ImageView
        android:id="@+id/dog_slide"
        android:layout_width="355dp"
        android:layout_height="351dp"
        android:contentDescription="@string/dog_breeds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify_breed_heading"
        app:layout_constraintVertical_bias="0.446" />

    <Button
        android:id="@+id/button"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimary"
        android:onClick="onSearchDogButtonClicked"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_stop"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/stop"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <ImageView
        android:id="@+id/search_button"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/dog_breeds"
        app:layout_constraintEnd_toStartOf="@+id/breed_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />




</androidx.constraintlayout.widget.ConstraintLayout>